--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,104 @@
-# C++ objects and libs
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
 
-*.slo
-*.lo
-*.o
+/debug/
+/src/Job/build/linux/debug/*.so
+/src/Job/build/linux/debug/*.so.*
+/src/Job/build/linux/debug/.qmake.stash
+/src/Job/build/linux/debug/.qmake.cache
+
+/src/SSDK/build/linux/debug/*.so
+/src/SSDK/build/linux/debug/*.so.*
+/src/SSDK/build/linux/debug/.qmake.stash
+/src/SSDK/build/linux/debug/.qmake.cache
+
+
+/release/
+/src/Job/build/linux/release/*.so
+/src/Job/build/linux/release/*.so.*
+/src/Job/build/linux/release/.qmake.stash
+/src/Job/build/linux/release/.qmake.cache
+
+/src/SSDK/build/linux/release/*.so
+/src/SSDK/build/linux/release/*.so.*
+/src/SSDK/build/linux/release/.qmake.stash
+/src/SSDK/build/linux/release/.qmake.cache
+
+
+/src/Job/.qmake.stash
+/src/Job/.qmake.cache
+/src/SSDK/.qmake.stash
+/src/SSDK/.qmake.cache
+
+/data/
+/include/
+/lib/
+
+*~
+*.autosave
 *.a
-*.la
-*.lai
-*.so
-*.dll
-*.dylib
-
-# Qt-es
-
+*.core
+*.moc
+*.o
+*.obj
+*.orig
+*.rej
+*_pch.h.cpp
+*_resource.rc
+*.qm
+.#*
+*.*#
+core
+!core/
+tags
+.DS_Store
+.directory
+*.debug
+Makefile*
+*.prl
+*.app
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+Thumbs.db
+*.res
+*.rc
 /.qmake.cache
 /.qmake.stash
-*.pro.user
-*.pro.user.*
-*.qbs.user
-*.qbs.user.*
-*.moc
-moc_*.cpp
-moc_*.h
-qrc_*.cpp
-ui_*.h
-Makefile*
-*build-*
 
-# QtCreator
+# qtcreator generated files
+*.pro.user*
 
-*.autosave
+# xemacs temporary files
+*.flc
 
-# QtCtreator Qml
-*.qmlproject.user
-*.qmlproject.user.*
+# Vim temporary files
+.*.swp
 
-# QtCtreator CMake
-CMakeLists.txt.user*
+# Visual Studio generated files
+*.ib_pdb_index
+*.idb
+*.ilk
+*.pdb
+*.sln
+*.suo
+*.vcproj
+*vcproj.*.*.user
+*.ncb
+*.sdf
+*.opensdf
+*.vcxproj
+*vcxproj.*
+
+# MinGW generated files
+*.Debug
+*.Release
+
+# Python byte code
+*.pyc
+
+# Binaries
+# --------
+*.dll
+*.exe
 
